# lazy-wheels

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package.json  pyproject.toml  uvr-rich-components.html
.claude/skills/release/: SKILL.md
.github/workflows/: check.yml  publish.yml  release.yml
docs/: CHANGELOG.md  guide.md  index.md
docs/.vitepress/: config.mts
docs/adr/: 0003-move-dependency-pinning-to-local-planning.md  0004-use-per-runner-build-matrix-instead-of-per-package.md  0006-use-post-release-hook-for-pypi-publishing.md  0008-support-dev-pre-and-post-releases-with-base-tags.md  0010-apply-release-versions-locally-before-ci-dispatch.md  0014-restructure-shared-module-architecture.md  index.md
docs/guide/: 01-setup.md  02-releasing.md  03-runners.md  04-hooks.md  05-pypi.md  06-skip-reuse.md  07-filtering.md  09-architecture.md  11-configuration.md  README.md  reference.md
docs/internals/: 01-init-and-validation.md  02-change-detection.md  03-dependency-pinning.md  04-build-matrix.md  05-workflow-model.md  06-release-plan.md  07-ci-execution.md  README.md
docs/under-the-hood/: 01-init-and-validation.md  02-change-detection.md  03-dependency-pinning.md  04-build-matrix.md  05-workflow-model.md  06-release-plan.md  07-ci-execution.md  README.md  index.md  package-states.md
docs/user-guide/: 01-getting-started.md  01-setup.md  02-releasing.md  03-runners.md  04-hooks.md  05-pypi.md  06-skip-reuse.md  07-troubleshooting.md  08-installing.md  09-architecture.md  09-commands.md  09-python-hooks.md  10-commands.md  README.md
lazy_wheels/: cli.py  deps.py  pipeline.py  release.yml  shell.py  toml.py
scripts/: sync-readme.sh
tests/: conftest.py  test_graph.py  test_pipeline.py  test_toml.py  test_versions.py
(+1 files in other folders)
