[project]
name = "lazy-wheels-workspace"
version = "0.0.0"
description = "Lazy wheels monorepo workspace"
requires-python = ">=3.11"
license = "MIT"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pkg-alpha = { workspace = true }
pkg-beta = { workspace = true }
pkg-gamma = { workspace = true }
pkg-delta = { workspace = true }
lazy-wheels = { workspace = true }

[dependency-groups]
dev = [
    "lazy-wheels",
    "ruff>=0.9",
    "ty>=0.0.1a6",
    "poethepoet>=0.32",
    "pytest>=8.0",
]

[tool.poe.tasks]
format = "ruff format ."
lint = "ruff check ."
lintfix = "ruff check --fix ."
typecheck = "ty check packages/lazy-wheels"
check = ["lint", "typecheck"]
fix = ["lintfix", "format"]
test = "pytest packages/lazy-wheels/tests/ -v"
all = ["fix", "check", "test"]
